--- a/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -726,9 +726,9 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        if passenger['Sex']=='female' and passenger['Fare']>80:\n",
+    "        if passenger['Sex']=='female' and passenger['Fare']>80: # found almost all woman with Fare>80 survived\n",
     "            predictions.append(1)\n",
-    "        elif passenger['Sex']=='female' and passenger['SibSp']>2:\n",
+    "        elif passenger['Sex']=='female' and passenger['SibSp']>2: # found almost all woman with SibSp>2 dead. maybe because of their sympathy?\n",
     "            predictions.append(0)\n",
     "        elif passenger['Sex']=='female':\n",
     "            predictions.append(1)\n",
@@ -799,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *1. the living probability of passengers in shipwreck 2.Sex and Fare*"
+    "**Answer**: *1. the possible actions take by individuals in catastrophes(could be use to do evacuation simulation) 2.Sex and friends/family member near*"
    ]
   },
   {
