--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -264,7 +264,11 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "Yes, because over 90% of variance is predictable."
+    "Yes, because over 90% of variance is predictable.\n",
+    "since total variance = explainable variance(variance comes from model predict) + error induce variance(not predict by model)  \n",
+    "R2 score = explainable variance/total variance  \n",
+    "so R2 score range is between 0~1 , (since variance is squared and always positive or zero)\n",
+    "A R2 score ~90% is relatively high, since the model predict 90% of the variance of dependent variable."
    ]
   },
   {
@@ -492,7 +496,11 @@
    "source": [
     "**Answer: **\n",
     "We won't know if the model is good until we actully train/fit it.\n",
-    "So we create a grid of these hyper-parameters and train/fit with these grid points, then pick a best one."
+    "So we create a grid of these hyper-parameters and train/fit with these grid points, then pick a best one.  \n",
+    "While doing grid search, there are several items needed to be define :  \n",
+    "1. performance metrics : this is the indicator for choosing better model(in this case, R2 score).  \n",
+    "2. model: the model type going to be trained (in this case, decision tree)\n",
+    "3. hyper-parameters : model-building params we want to try,if there are more than 1 kind of hyper-parameters and each with levels more than 1, these combinations forms a \"grid\", which we will search in for the best combination. (in this case, we train decision tree model with different \"max_depth\", and try to find the best one by picking the model with best R2 score).   "
    ]
   },
   {
@@ -515,8 +523,15 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "Because doing grid search for fix split may result in pick up a hyper-parameters set which overfit this training/test split.\n",
-    "By split training datas in to K-split, and treat one split as validation set/other K-1 split as training sets each time and take the average score, this reduce the overfitting possibility and also keeps the size of training datas(use 1/k for validation)."
+    "Because doing grid search for certain train data sets has the risk for picking up a model which is biased by this specific train/test sets(which means we may pick a model which is only good for this specific arrange of train/test split and not generalized well).  \n",
+    "In order to prevent this:  \n",
+    "1. first split train data into k sets.  \n",
+    "2. select a fixed \"grid\" point.  \n",
+    "3. train model using k-1 sets of data and use the remain one as validation to check the model performance.  \n",
+    "4. loop step 3 for K times with different validation set picked. and calculate mean of performance metrics for these result.  \n",
+    "4. loop step 2,3 for all grid points.  \n",
+    "\n",
+    "This methods prevents bias for the train/split arrangement(each hyper-params combination is calculated by the mean of k kinds of arrangement of train/validation sets) and no big reduction to the train data size ((k-1)/k train data is used in each train)\n"
    ]
   },
   {
@@ -543,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
@@ -688,7 +705,9 @@
     "\n",
     "Predicted selling price for Client 2's home: $189,123.53   \n",
     "\n",
-    "Predicted selling price for Client 3's home: $942,666.67   "
+    "Predicted selling price for Client 3's home: $942,666.67   \n",
+    "\n",
+    "I think this predict is quite reasonable because people tends to pay more for bigger/more education resource/high class neighborhoods(in this case, high income)."
    ]
   },
   {
