--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -697,6 +697,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.decribe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -705,7 +727,23 @@
     "\n",
     "Predicted selling price for Client 2's home: $189,123.53   \n",
     "\n",
-    "Predicted selling price for Client 3's home: $942,666.67   \n",
+    "Predicted selling price for Client 3's home: $942,666.67  \n",
+    "\n",
+    "statictic of prices in datasets:\n",
+    "mean:454343\n",
+    "stdev:165171\n",
+    "\n",
+    "features in this dataset:  \n",
+    "rooms = 6.24  \n",
+    "LSTAT mean = 12.94  \n",
+    "PTRATIO mean =18.52\n",
+    "\n",
+    "Prediction prices of Clients 1 is at -0.38*sigma\n",
+    "Clients 1 has fewer rooms/higher Neighborhood poverty level/fewer education resource than feature means, so the prices should be lower then the mean of prices of this dataset.\n",
+    "Prediction prices of Clients 2 is at -1.605*sigma  \n",
+    "Clients 2 has much fewer rooms/higher Neighborhood poverty level/fewer education resource than feature means, so the prices should be lower then the mean of prices of this dataset and lower then Clients 1.\n",
+    "Prediction prices of Clients 3 is at  2.956*sigma  \n",
+    "Clients 3 has more rooms/lower Neighborhood poverty level/higher education resource than feature means, so the prices should be higher then the mean of prices of this dataset.\n",
     "\n",
     "I think this predict is quite reasonable because people tends to pay more for bigger/more education resource/high class neighborhoods(in this case, high income)."
    ]
