--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -488,6 +488,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -718,20 +727,21 @@
     "4. This data is cleaned and without lots of missing, LR can also provide the predict probability. (which means we can adjust the probability threshold for finding potential donating target)\n",
     "\n",
     "Gradient Boosting:\n",
-    "1. from examination data of a person --> predict if this man is suffering certain disease. \n",
-    "2. tree-based/ensemble method(ensemble is good against overfitting and provide good generalization), also because there are mix types of features(numerical+binary), tree-type algorithms can handle this better.  \n",
-    "3. tree base+ensemble = hard to interpret (blackbox)   \n",
-    "4. We have high dimensionality/binary+continous feature , enough data point and doing classification, tree+ensemble so suits well.  \n",
+    "1. from personal information --> predict if he/she is a terroist (security). \n",
+    "2. tree-based/ensemble method(ensemble is good), since GBM create sequence trees base on error, if carefully tuned, could provide better performance than RF.And also GBM allows apply other custom loss func if it's differntialible.  \n",
+    "3. On the other side, since GBM create sequence tree base on error of pre-iteration , means it's more likely to fit to data noise(real data are noisy) which cause overffitng (compare to RF). Also the hyperparameters needs to by tuned carefully.\n",
+    "4. We have high dimensionality/binary+continous feature , enough data point and doing classification, tree+ensemble should suits well.  \n",
     "\n",
     "Random Forest:\n",
     "1. from examination data of a person --> predict if this man is suffering certain disease.  \n",
-    "2. tree-based/ensemble method(ensemble is good against overfitting and provide good generalization), also because there are mix types of features(numerical+binary), tree-type algorithms can handle this better.  \n",
-    "3. tree base+ensemble = hard to interpret (blackbox)    \n",
-    "4. We have high dimensionality/binary+continous feature , enough data point and doing classification, tree+ensemble so suits well.   \n",
+    "2. tree-based/ensemble method(ensemble is good), because there are mix types of features(numerical+binary), tree-type algorithms can handle this better. Also since RF create tree by randomly select features it's good against dirty/noisy data. \n",
+    "3. tree base+ensemble = hard to interpret (blackbox). And because it's resistance to noisy/dirty data ,on the other side, performance may not as good as GBM.      \n",
+    "4. We have high dimensionality/binary+continous feature , enough data point and doing classification, tree+ensemble should suits well.   \n",
     "\n",
     "ref:  \n",
     "https://www.quora.com/What-are-the-advantages-of-different-classification-algorithms  \n",
-    "https://docs.microsoft.com/en-gb/azure/machine-learning/studio/algorithm-choice"
+    "https://docs.microsoft.com/en-gb/azure/machine-learning/studio/algorithm-choice  \n",
+    "https://medium.com/@aravanshad/gradient-boosting-versus-random-forest-cfa3fa8f0d80"
    ]
   },
   {
