--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -2415,17 +2415,12 @@
    "metadata": {},
    "source": [
     "**Answer:**  \n",
-    "select 50/50 samples from segment0/1 customers and further split to 25/25 for each 50 samples check their reactions(positive/negative) to delivery service change.  \n",
-    "Use Chi-squared-test to check if null hypothesis holds : no difference between the reactions to delivery service change of segment0 and segment1.\n",
-    "        \n",
-    "        \n",
-    "            change     keep\n",
-    "    seg1     25        25\n",
     "\n",
-    "    seg2     25        25\n",
+    "Since we got customer segments, we can run A/B tests for both group one by one(can't choose any group as control and the other as experiment because we still don't know if this change might be group dependent).  \n",
+    "For each group , control : 5days/week, exp:3days/week, and check the test result to decide if should apply service changes to that group. \n",
     "\n",
     "ref:  \n",
-    "https://en.wikipedia.org/wiki/Chi-squared_test"
+    "https://www.quora.com/When-should-A-B-testing-not-be-trusted-to-make-decisions/answer/Edwin-Chen-1"
    ]
   },
   {
